[package]
name = "lichess-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
bytes = "*"
owlchess = "0.3.2"
pancurses = "0.17"